Updated backend folder from genai-backend branch